--- a/static/Index.html
+++ b/static/Index.html
@@ -109,8 +109,9 @@
     <footer class="footer">
       <p class="footer__text">台灣空氣品質網</p>
     </footer>
-    <script src="../TW_map.js"></script>
-    <script src="station-data.js"></script>
+    <script type="module" src="../TW_map.js"></script>
+    <script type="module" src="station-data.js"></script>
+    <script type="module" src="map-interaction.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://unpkg.com/topojson-client@3"></script>
   </body>
