--- a/static/Index.html
+++ b/static/Index.html
@@ -1,193 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>The Air 台灣空氣品質即時資訊</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="station-page.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Air 台灣空氣品質即時資訊</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="station-page.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-</head>
-
-<body>
-  <header class="header">
-    <div class="navbar">
-      <div class="nav-text"><a href="./">The Air</a></div>
-      <div class="nav-list">
-        <div class="list-item"><a href="forecast-table.html">未來預報</a></div>
-      </div>
-    </div>
-  </header>
-  <div class="main-content">
-    <div class="content-text">
-      <img src="./icon/air1.png" alt="icon" />
-      <span>全國空氣品質即時監測</span>
-    </div>
-    <div class="content-monitor">
-      <div class="monitor-left">
-        <div class="map-small">
-          <div class="map-wrapper">
-            <div id="mapLC"></div>
-            <div class="skeleton-overlay" id="skeletonLC"></div>
-          </div>
-          <div class="map-wrapper">
-            <div id="mapKM"></div>
-            <div class="skeleton-overlay" id="skeletonKM"></div>
-          </div>
-          <div class="map-wrapper">
-            <div id="mapPH"></div>
-            <div class="skeleton-overlay" id="skeletonPH"></div>
-          </div>
-        </div>
-        <div class="map-wrapper map-main">
-          <div class="map-main" id="mapTW"></div>
-          <div class="skeleton-overlay" id="skeletonTW"></div>
-        </div>
-      </div>
-      <div class="monitor-right">
-        <div id="dataList" class="cards-container" style="position: relative">
-          <!-- 篩選卡片 -->
-          <div class="selector-card">
-            <h4>請使用下方搜尋功能查詢</h4>
-            <div class="selector-group">
-              <div class="selector-row">
-                <label for="citySelector">縣市：</label>
-                <select id="citySelector">
-                  <option value="">請選擇縣市</option>
-                </select>
-              </div>
-              <div class="selector-row">
-                <label for="siteSelector">測站：</label>
-                <select id="siteSelector" disabled>
-                  <option value="">請選擇觀測站</option>
-                </select>
-              </div>
-            </div>
-          </div>
-
-          <!-- 測站資料卡片 -->
-          <div class="station-card">
-            <div id="stationDetail">
-              <h2>縣市 / 測站名稱</h2>
-              <p style="font-size: 12px; color: #666">更新時間：--</p>
-              <div class="aqi-circle aqi-good">
-                <p class="aqi-label">空污指標AQI</p>
-                <p class="aqi-value">--</p>
-                <p class="aqi-status">良好</p>
-              </div>
-              <div class="detail-table">
-                <div>
-                  <strong>PM2.5<br />細懸浮微粒(μg/m3)</strong>
-                  <div class="value-block">
-                    <span>移動平均：<span class="value">--</span></span>
-                    <span>小時濃度：<span class="value">--</span></span>
-                  </div>
-                </div>
-                <div>
-                  <strong>PM10<br />懸浮微粒(μg/m3)</strong>
-                  <div class="value-block">
-                    <span>移動平均：<span class="value">--</span></span>
-                    <span>小時濃度：<span class="value">--</span></span>
-                  </div>
-                </div>
-                <div>
-                  <strong>O₃<br />臭氧(ppb)</strong>
-                  <div class="value-block">
-                    <span>O₃移平均：<span class="value">--</span></span>
-                    <span>小時濃度：<span class="value">--</span></span>
-                  </div>
-                </div>
-                <div>
-                  <strong>CO<br />一氧化碳(ppm)</strong>
-                  <div class="value-block">
-                    <span>CO移平均：<span class="value">--</span></span>
-                    <span>小時濃度：<span class="value">--</span></span>
-                  </div>
-                </div>
-                <div>
-                  <strong>SO₂<br />二氧化硫(ppb)</strong>
-                  <div class="value-block">
-                    <span>小時濃度：<span class="value">--</span></span>
-                  </div>
-                </div>
-                <div>
-                  <strong>NO₂<br />二氧化氮(ppb)</strong>
-                  <div class="value-block">
-                    <span>小時濃度：<span class="value">--</span></span>
-                  </div>
-                </div>
-              </div>
-            </div>
+  <body>
+    <header class="header">
+      <div class="navbar">
+        <div class="nav-text"><a href="./">The Air</a></div>
+        <div class="nav-list">
+          <div class="list-item">
+            <a href="forecast-table.html">未來預報</a>
           </div>
         </div>
       </div>
-    </div>
-    <div class="content-addition">
+    </header>
+    <div class="main-content">
       <div class="content-text">
-        <img src="./icon/air2.png" alt="icon" />
-        <span>各項污染物介紹</span>
+        <img src="./icon/air1.png" alt="icon" />
+        <span>全國空氣品質即時監測</span>
       </div>
-      <div class="infoCards">
-        <div class="grid-card" onclick="this.classList.toggle('flipped')">
-          <div class="card-inner">
-            <div class="card-front">細懸浮微粒 (PM2.5)</div>
-            <div class="card-back">
-              交通污染
-              (道路揚塵、車輛排放廢氣)、營建施工、工業污染、境外污染、露天燃燒
+      <div class="content-monitor">
+        <div class="monitor-left">
+          <div class="map-small">
+            <div class="map-wrapper">
+              <div id="mapLC"></div>
+              <div class="skeleton-overlay" id="skeletonLC"></div>
+            </div>
+            <div class="map-wrapper">
+              <div id="mapKM"></div>
+              <div class="skeleton-overlay" id="skeletonKM"></div>
+            </div>
+            <div class="map-wrapper">
+              <div id="mapPH"></div>
+              <div class="skeleton-overlay" id="skeletonPH"></div>
+            </div>
+          </div>
+          <div class="map-wrapper map-main">
+            <div class="map-main" id="mapTW"></div>
+            <div class="skeleton-overlay" id="skeletonTW"></div>
+          </div>
+        </div>
+        <div class="monitor-right">
+          <div id="dataList" class="cards-container" style="position: relative">
+            <!-- 篩選卡片 -->
+            <div class="selector-card">
+              <h4>請使用下方搜尋功能查詢</h4>
+              <div class="selector-group">
+                <div class="selector-row">
+                  <label for="citySelector">縣市：</label>
+                  <select id="citySelector">
+                    <option value="">請選擇縣市</option>
+                  </select>
+                </div>
+                <div class="selector-row">
+                  <label for="siteSelector">測站：</label>
+                  <select id="siteSelector" disabled>
+                    <option value="">請選擇觀測站</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
+            <!-- 測站資料卡片 -->
+            <div class="station-card">
+              <div id="stationDetail">
+                <h2>縣市 / 測站名稱</h2>
+                <p style="font-size: 12px; color: #666">更新時間：--</p>
+                <div class="aqi-circle aqi-good">
+                  <p class="aqi-label">空污指標AQI</p>
+                  <p class="aqi-value">--</p>
+                  <p class="aqi-status">良好</p>
+                </div>
+                <div class="detail-table">
+                  <div>
+                    <strong>PM2.5<br />細懸浮微粒(μg/m3)</strong>
+                    <div class="value-block">
+                      <span>移動平均：<span class="value">--</span></span>
+                      <span>小時濃度：<span class="value">--</span></span>
+                    </div>
+                  </div>
+                  <div>
+                    <strong>PM10<br />懸浮微粒(μg/m3)</strong>
+                    <div class="value-block">
+                      <span>移動平均：<span class="value">--</span></span>
+                      <span>小時濃度：<span class="value">--</span></span>
+                    </div>
+                  </div>
+                  <div>
+                    <strong>O₃<br />臭氧(ppb)</strong>
+                    <div class="value-block">
+                      <span>O₃移平均：<span class="value">--</span></span>
+                      <span>小時濃度：<span class="value">--</span></span>
+                    </div>
+                  </div>
+                  <div>
+                    <strong>CO<br />一氧化碳(ppm)</strong>
+                    <div class="value-block">
+                      <span>CO移平均：<span class="value">--</span></span>
+                      <span>小時濃度：<span class="value">--</span></span>
+                    </div>
+                  </div>
+                  <div>
+                    <strong>SO₂<br />二氧化硫(ppb)</strong>
+                    <div class="value-block">
+                      <span>小時濃度：<span class="value">--</span></span>
+                    </div>
+                  </div>
+                  <div>
+                    <strong>NO₂<br />二氧化氮(ppb)</strong>
+                    <div class="value-block">
+                      <span>小時濃度：<span class="value">--</span></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="grid-card" onclick="this.classList.toggle('flipped')">
-          <div class="card-inner">
-            <div class="card-front">懸浮微粒 (PM10)</div>
-            <div class="card-back">
-              交通污染
-              (道路揚塵、車輛排放廢氣)、營建施工、工業污染、境外污染、露天燃燒
+      </div>
+      <div class="content-addition">
+        <div class="content-text">
+          <img src="./icon/air2.png" alt="icon" />
+          <span>各項污染物介紹</span>
+        </div>
+        <div class="infoCards">
+          <div class="grid-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-inner">
+              <div class="card-front">細懸浮微粒 (PM2.5)</div>
+              <div class="card-back">
+                交通污染
+                (道路揚塵、車輛排放廢氣)、營建施工、工業污染、境外污染、露天燃燒
+              </div>
             </div>
           </div>
-        </div>
-        <div class="grid-card" onclick="this.classList.toggle('flipped')">
-          <div class="card-inner">
-            <div class="card-front">二氧化硫 (SO2)</div>
-            <div class="card-back">自然界 (火山)、燃料中硫份燃燒。</div>
-          </div>
-        </div>
-        <div class="grid-card" onclick="this.classList.toggle('flipped')">
-          <div class="card-inner">
-            <div class="card-front">氮氧化物 (NOX)</div>
-            <div class="card-back">
-              燃燒過程中，空氣中氮或燃料中氮化物氧化而成，光化學反應中可反應成二氧化氮。
+          <div class="grid-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-inner">
+              <div class="card-front">懸浮微粒 (PM10)</div>
+              <div class="card-back">
+                交通污染
+                (道路揚塵、車輛排放廢氣)、營建施工、工業污染、境外污染、露天燃燒
+              </div>
             </div>
           </div>
-        </div>
-        <div class="grid-card" onclick="this.classList.toggle('flipped')">
-          <div class="card-inner">
-            <div class="card-front">一氧化碳 (CO)</div>
-            <div class="card-back">
-              除森林火災、甲烷氧化及生物活動等自然現象產生外石化等燃料之不完全燃燒產生
+          <div class="grid-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-inner">
+              <div class="card-front">二氧化硫 (SO2)</div>
+              <div class="card-back">自然界 (火山)、燃料中硫份燃燒。</div>
             </div>
           </div>
-        </div>
-        <div class="grid-card" onclick="this.classList.toggle('flipped')">
-          <div class="card-inner">
-            <div class="card-front">臭氧 (O3)</div>
-            <div class="card-back">
-              係一種由氮氧化物、反應性碳氫化合物及日光照射後產生之二次污染物。
+          <div class="grid-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-inner">
+              <div class="card-front">氮氧化物 (NOX)</div>
+              <div class="card-back">
+                燃燒過程中，空氣中氮或燃料中氮化物氧化而成，光化學反應中可反應成二氧化氮。
+              </div>
+            </div>
+          </div>
+          <div class="grid-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-inner">
+              <div class="card-front">一氧化碳 (CO)</div>
+              <div class="card-back">
+                除森林火災、甲烷氧化及生物活動等自然現象產生外石化等燃料之不完全燃燒產生
+              </div>
+            </div>
+          </div>
+          <div class="grid-card" onclick="this.classList.toggle('flipped')">
+            <div class="card-inner">
+              <div class="card-front">臭氧 (O3)</div>
+              <div class="card-back">
+                係一種由氮氧化物、反應性碳氫化合物及日光照射後產生之二次污染物。
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <footer class="footer">
-    <p class="footer-text">COPYRIGHT @ 2025 The Air</p>
-  </footer>
-  <script type="module" src="TW_map.js"></script>
-  <script type="module" src="station-data.js"></script>
-  <script type="module" src="map-interaction.js"></script>
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/topojson-client@3"></script>
-</body>
-
+    <footer class="footer">
+      <p class="footer-text">COPYRIGHT @ 2025 The Air</p>
+    </footer>
+    <script type="module" src="TW_map.js"></script>
+    <script type="module" src="station-data.js"></script>
+    <script type="module" src="map-interaction.js"></script>
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/topojson-client@3"></script>
+  </body>
 </html>
