調整檔案結構

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Air 台灣空氣品質即時資訊</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="station-page.css" />
+    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="/static/station-page.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   </head>
 
@@ -22,7 +22,7 @@
     </header>
     <div class="main-content">
       <div class="content-text">
-        <img src="./icon/air1.png" alt="icon" />
+        <img src="/static/icon/air1.png" alt="icon" />
         <span>全國空氣品質即時監測</span>
       </div>
       <div class="content-monitor">
@@ -126,7 +126,7 @@
       </div>
       <div class="content-addition">
         <div class="content-text">
-          <img src="./icon/air2.png" alt="icon" />
+          <img src="/static/icon/air2.png" alt="icon" />
           <span>各項污染物介紹</span>
         </div>
         <div class="infoCards">
