--- a/forecast-table.html
+++ b/forecast-table.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>The Air 台灣空氣品質即時資訊</title>
-    <link rel="stylesheet" href="/static/style.css" />
-    <link rel="stylesheet" href="/static/forecast-table.css" />
-    <link rel="stylesheet" href="/static/station-page.css" />
+    <link rel="stylesheet" href="static/style.css" />
+    <link rel="stylesheet" href="static/forecast-table.css" />
+    <link rel="stylesheet" href="static/station-page.css" />
   </head>
 
   <body>
