--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <div class="main-content">
       <div class="content-text">
-        <img src="/static/icon/air1.png" alt="icon" />
+        <img src="static/icon/air1.png" alt="icon" />
         <span>全國空氣品質即時監測</span>
       </div>
       <div class="content-monitor">
@@ -126,7 +126,7 @@
       </div>
       <div class="content-addition">
         <div class="content-text">
-          <img src="/static/icon/air2.png" alt="icon" />
+          <img src="static/icon/air2.png" alt="icon" />
           <span>各項污染物介紹</span>
         </div>
         <div class="infoCards">
